--- a/pm-app/package.json
+++ b/pm-app/package.json
@@ -2,21 +2,22 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "dev:css": "postcss app/styles --base app/styles --dir app/dist/styles -w",
-    "dev:remix": "remix dev",
-    "dev:server": "node server/index.js",
-    "dev": "npm run db:start && pm2-dev pm2.config.js",
+    "build": "run-s \"build:*\"",
+    "build:css": "npm run generate:css -- --env production",
+    "build:remix": "remix build",
+    "db:check": "docker ps",
+    "db:reset": "prisma migrate reset --force",
     "db:start": "docker compose up -d",
     "db:stop": "docker compose down",
     "db:update": "prisma migrate dev",
-    "db:reset": "prisma migrate reset --force",
-    "db:check": "docker ps",
-    "build:css": "postcss app/styles --base app/styles --dir app/dist/styles --env production",
-    "build:remix": "remix build",
-    "build": "run-s \"build:*\"",
-    "typecheck": "tsc -b",
     "deploy": "flyctl deploy",
-    "start": "node server/index.js"
+    "dev": "npm run db:start && pm2-dev pm2.config.js",
+    "dev:css": "npm run generate:css -- --watch",
+    "dev:remix": "remix dev",
+    "dev:server": "node server/index.js",
+    "generate:css": "postcss app/styles --base app/styles --dir app/dist/styles",
+    "start": "node server/index.js",
+    "typecheck": "tsc -b"
   },
   "dependencies": {
     "@prisma/client": "^3.10.0",
@@ -28,9 +29,9 @@
     "@remix-run/serve": "*",
     "bcrypt": "^5.0.1",
     "clsx": "^1.1.1",
+    "isbot": "^3.6.5",
     "match-sorter": "^6.3.1",
     "prisma": "^3.10.0",
-    "isbot": "^3.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "validator": "^13.7.0"
