--- a/turborepo-vercel/package.json
+++ b/turborepo-vercel/package.json
@@ -8,7 +8,8 @@
     "build": "turbo run build",
     "dev": "turbo run dev --parallel",
     "format": "prettier --write .",
-    "lint": "turbo run lint"
+    "lint": "turbo run lint",
+    "typecheck": "turbo run typecheck"
   },
   "dependencies": {},
   "devDependencies": {
