--- a/turborepo-vercel/turbo.json
+++ b/turborepo-vercel/turbo.json
@@ -18,6 +18,9 @@
       "dependsOn": ["^build"],
       "outputs": []
     },
+    "typecheck": {
+      "dependsOn": ["^build"]
+    },
     "dev": {
       "cache": false
     }
