--- a/chakra-ui/package.json
+++ b/chakra-ui/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "build": "remix build",
     "dev": "remix dev",
-    "start": "remix-serve build"
+    "start": "remix-serve build",
+    "typecheck": "tsc -b"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.3.6",
