--- a/dataloader/package.json
+++ b/dataloader/package.json
@@ -5,7 +5,8 @@
     "build": "remix build",
     "dev": "remix watch",
     "start": "cross-env NODE_ENV=production node -r esbuild-register server/index.ts",
-    "start:dev": "cross-env NODE_ENV=development node -r esbuild-register server/index.ts"
+    "start:dev": "cross-env NODE_ENV=development node -r esbuild-register server/index.ts",
+    "typecheck": "tsc -b"
   },
   "dependencies": {
     "@remix-run/express": "*",
