--- a/firebase/package.json
+++ b/firebase/package.json
@@ -5,7 +5,8 @@
     "build": "remix build",
     "dev": "remix dev",
     "emulators": "firebase emulators:start --project remix-emulator --import=firebase-fixtures",
-    "start": "remix-serve build"
+    "start": "remix-serve build",
+    "typecheck": "tsc -b"
   },
   "dependencies": {
     "@remix-run/node": "*",
