--- a/quirrel/package.json
+++ b/quirrel/package.json
@@ -6,7 +6,8 @@
     "dev": "run-p \"dev:*\"",
     "dev:quirrel": "quirrel",
     "dev:remix": "remix dev",
-    "start": "remix-serve build"
+    "start": "remix-serve build",
+    "typecheck": "tsc -b"
   },
   "dependencies": {
     "@remix-run/node": "*",
