--- a/routes-gen/package.json
+++ b/routes-gen/package.json
@@ -5,7 +5,8 @@
     "build": "remix build && npm run routes-gen",
     "dev": "remix dev",
     "routes-gen": "routes-gen -d @routes-gen/remix",
-    "start": "remix-serve build"
+    "start": "remix-serve build",
+    "typecheck": "tsc -b"
   },
   "dependencies": {
     "@remix-run/node": "*",
