--- a/sass/package.json
+++ b/sass/package.json
@@ -3,12 +3,14 @@
   "sideEffects": false,
   "scripts": {
     "build": "run-s \"build:*\"",
-    "build:css": "sass styles/:app/styles/ --style=compressed",
+    "build:css": "npm run generate:css -- --style=compressed",
     "build:remix": "remix build",
     "dev": "run-p \"dev:*\"",
-    "dev:css": "sass styles/:app/styles/ --watch ",
+    "dev:css": "npm run generate:css -- --watch",
     "dev:remix": "remix dev",
-    "start": "remix-serve build"
+    "generate:css": "sass styles/:app/styles/",
+    "start": "remix-serve build",
+    "typecheck": "tsc -b"
   },
   "dependencies": {
     "@remix-run/node": "*",
