--- a/session-flash/package.json
+++ b/session-flash/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "build": "remix build",
     "dev": "remix dev",
-    "start": "remix-serve build"
+    "start": "remix-serve build",
+    "typecheck": "tsc -b"
   },
   "dependencies": {
     "@fontsource/fira-sans": "^4.5.8",
