--- a/socket.io/package.json
+++ b/socket.io/package.json
@@ -5,7 +5,8 @@
     "build": "remix build",
     "dev": "remix watch",
     "start": "cross-env NODE_ENV=production node server/index.js",
-    "start:dev": "cross-env NODE_ENV=development node server/index.js"
+    "start:dev": "cross-env NODE_ENV=development node server/index.js",
+    "typecheck": "tsc -b"
   },
   "dependencies": {
     "@remix-run/express": "*",
