--- a/theme-ui/package.json
+++ b/theme-ui/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "build": "remix build",
     "dev": "remix dev",
-    "start": "remix-serve build"
+    "start": "remix-serve build",
+    "typecheck": "tsc -b"
   },
   "dependencies": {
     "@emotion/cache": "^11.7.1",
