--- a/vanilla-extract/package.json
+++ b/vanilla-extract/package.json
@@ -5,12 +5,14 @@
   ],
   "scripts": {
     "build": "run-s \"build:*\"",
-    "build:css": "tsup",
+    "build:css": "npm run generate:css",
     "build:remix": "remix build",
     "dev": "run-p \"dev:*\"",
-    "dev:css": "tsup --watch",
+    "dev:css": "npm run generate:css -- --watch",
     "dev:remix": "remix dev",
-    "start": "remix-serve build"
+    "generate:css": "tsup",
+    "start": "remix-serve build",
+    "typecheck": "tsc -b"
   },
   "dependencies": {
     "@remix-run/node": "*",
