ci: wip add script to install, build, and typecheck examples
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
   },
   "engines": {
     "node": ">=14"
+  },
+  "dependencies": {
+    "@antfu/ni": "^0.18.8",
+    "@npmcli/package-json": "^3.0.0",
+    "execa": "^6.1.0",
+    "fs-extra": "11.1.0"
   }
 }
